{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 113,
  "lineage": "43e99f6a-0e3c-3047-2ae2-f32f54bc8e63",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789678811749:internet-gateway/igw-088201532d2996976",
            "id": "igw-088201532d2996976",
            "owner_id": "789678811749",
            "vpc_id": "vpc-01e80a6543e1bf6e8"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-fz-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:loadbalancer/app/fz-test-app-fz-lb/73e55e50667aaf23",
            "arn_suffix": "app/fz-test-app-fz-lb/73e55e50667aaf23",
            "dns_name": "fz-test-app-fz-lb-319251172.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:loadbalancer/app/fz-test-app-fz-lb/73e55e50667aaf23",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fz-test-app-fz-lb",
            "security_groups": [
              "sg-05c688ae445102ea8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0db8c147a0dd175b3"
              },
              {
                "subnet_id": "subnet-0f06dc1d21cb87431"
              }
            ],
            "subnets": [
              "subnet-0db8c147a0dd175b3",
              "subnet-0f06dc1d21cb87431"
            ],
            "vpc_id": "vpc-01e80a6543e1bf6e8",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.app-lb-sc",
            "aws_subnet.fz-sn-1",
            "aws_subnet.fz-sn-2",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "grafana-fz-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:loadbalancer/app/fz-test-grafana-fz-lb/781197a384fa772b",
            "arn_suffix": "app/fz-test-grafana-fz-lb/781197a384fa772b",
            "dns_name": "fz-test-grafana-fz-lb-386186344.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:loadbalancer/app/fz-test-grafana-fz-lb/781197a384fa772b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fz-test-grafana-fz-lb",
            "security_groups": [
              "sg-001631ffcadf6d2f9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0db8c147a0dd175b3"
              },
              {
                "subnet_id": "subnet-0f06dc1d21cb87431"
              }
            ],
            "subnets": [
              "subnet-0db8c147a0dd175b3",
              "subnet-0f06dc1d21cb87431"
            ],
            "vpc_id": "vpc-01e80a6543e1bf6e8",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.grafana-lb-sc",
            "aws_subnet.fz-sn-1",
            "aws_subnet.fz-sn-2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "grafana-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:listener/app/fz-test-grafana-fz-lb/781197a384fa772b/c4beb62d8e2d1cd8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:targetgroup/fz-test-fz-grafana-target-group/84ae9f9ae054cbc9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:listener/app/fz-test-grafana-fz-lb/781197a384fa772b/c4beb62d8e2d1cd8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:loadbalancer/app/fz-test-grafana-fz-lb/781197a384fa772b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.grafana-fz-lb",
            "aws_lb_target_group.fz-grafana-target-group",
            "aws_security_group.grafana-lb-sc",
            "aws_subnet.fz-sn-1",
            "aws_subnet.fz-sn-2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "java-application-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:listener/app/fz-test-app-fz-lb/73e55e50667aaf23/61512a772bcb8af2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:targetgroup/fz-test-fz-app-target-group/9e34d52208d5c5cf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:listener/app/fz-test-app-fz-lb/73e55e50667aaf23/61512a772bcb8af2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:loadbalancer/app/fz-test-app-fz-lb/73e55e50667aaf23",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.app-fz-lb",
            "aws_lb_target_group.fz-app-target-group",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fz-app-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:targetgroup/fz-test-fz-app-target-group/9e34d52208d5c5cf",
            "arn_suffix": "targetgroup/fz-test-fz-app-target-group/9e34d52208d5c5cf",
            "deregistration_delay": 30,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 20,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 18,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:targetgroup/fz-test-fz-app-target-group/9e34d52208d5c5cf",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "fz-test-fz-app-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 30,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01e80a6543e1bf6e8"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fz-grafana-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:targetgroup/fz-test-fz-grafana-target-group/84ae9f9ae054cbc9",
            "arn_suffix": "targetgroup/fz-test-fz-grafana-target-group/84ae9f9ae054cbc9",
            "deregistration_delay": 30,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 20,
                "matcher": "200",
                "path": "/login",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 18,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:789678811749:targetgroup/fz-test-fz-grafana-target-group/84ae9f9ae054cbc9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "fz-test-fz-grafana-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 30,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01e80a6543e1bf6e8"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-088201532d2996976",
            "id": "r-rtb-0c9f6aeb68a9ddae41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c9f6aeb68a9ddae4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-s-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec6b557e60492e91",
            "route_table_id": "rtb-0c9f6aeb68a9ddae4",
            "subnet_id": "subnet-0db8c147a0dd175b3"
          },
          "dependencies": [
            "aws_subnet.fz-sn-1",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-s-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a00bc7179b759d10",
            "route_table_id": "rtb-0c9f6aeb68a9ddae4",
            "subnet_id": "subnet-0f06dc1d21cb87431"
          },
          "dependencies": [
            "aws_subnet.fz-sn-2",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-lb-sc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789678811749:security-group/sg-05c688ae445102ea8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023b6657e1e16c033"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-05c688ae445102ea8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Connection from internet on port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fz-test-app-lb-sc",
            "name_prefix": "",
            "owner_id": "789678811749",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01e80a6543e1bf6e8"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fz-app-instance-sc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789678811749:security-group/sg-023b6657e1e16c033",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023b6657e1e16c033",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from permited CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Connection from LB and grafana instances",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c688ae445102ea8"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "fz-test-fz-app-instance-sc",
            "name_prefix": "",
            "owner_id": "789678811749",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01e80a6543e1bf6e8"
          },
          "dependencies": [
            "aws_security_group.app-lb-sc",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fz-grafana-instance-sc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789678811749:security-group/sg-0486e33d7fb2e4d6f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0486e33d7fb2e4d6f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Connection from LB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001631ffcadf6d2f9"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "fz-test-fz-grafana-instance-sc",
            "name_prefix": "",
            "owner_id": "789678811749",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01e80a6543e1bf6e8"
          },
          "dependencies": [
            "aws_security_group.grafana-lb-sc",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grafana-lb-sc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789678811749:security-group/sg-001631ffcadf6d2f9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023b6657e1e16c033"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "id": "sg-001631ffcadf6d2f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Connection from internet on port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fz-test-grafana-lb-sc",
            "name_prefix": "",
            "owner_id": "789678811749",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01e80a6543e1bf6e8"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-healthcheck",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-1359866481",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05c688ae445102ea8",
            "self": false,
            "source_security_group_id": "sg-023b6657e1e16c033",
            "to_port": 8080,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.app-lb-sc",
            "aws_security_group.fz-app-instance-sc",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "grafana-healthcheck",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-653878155",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-001631ffcadf6d2f9",
            "self": false,
            "source_security_group_id": "sg-023b6657e1e16c033",
            "to_port": 3000,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.app-lb-sc",
            "aws_security_group.fz-app-instance-sc",
            "aws_security_group.grafana-lb-sc",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fz-sn-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789678811749:subnet/subnet-0db8c147a0dd175b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0db8c147a0dd175b3",
            "map_public_ip_on_launch": true,
            "owner_id": "789678811749",
            "tags": {
              "Name": "fz-test:FZ Subnet 1"
            },
            "vpc_id": "vpc-01e80a6543e1bf6e8"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fz-sn-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789678811749:subnet/subnet-0f06dc1d21cb87431",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0f06dc1d21cb87431",
            "map_public_ip_on_launch": true,
            "owner_id": "789678811749",
            "tags": {
              "Name": "fz-test:FZ Subnet 2"
            },
            "vpc_id": "vpc-01e80a6543e1bf6e8"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789678811749:vpc/vpc-01e80a6543e1bf6e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0fc57aa2da1b41984",
            "default_route_table_id": "rtb-0c9f6aeb68a9ddae4",
            "default_security_group_id": "sg-08a00cac4bd3e4f9e",
            "dhcp_options_id": "dopt-03f3b53f0359bd5b9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01e80a6543e1bf6e8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c9f6aeb68a9ddae4",
            "owner_id": "789678811749",
            "tags": {
              "Name": "fz-test:FZ VPC"
            }
          }
        }
      ]
    }
  ]
}